...
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

...
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/background_line" />

            </LinearLayout>

            <Button
                android:id="@+id/review_button"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:text="@string/add_a_review"
...
                    android:textAlignment="center"
                    android:textColor="@color/black_grey"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/see_more_review_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="right"
...
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="RtlHardcoded" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true"
                tools:itemCount="5"
                tools:listitem="@layout/item_review">
...
