...
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/cat_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
...
                    android:isScrollContainer="true"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_most_review_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:isScrollContainer="true"
                        android:nestedScrollingEnabled="true"
                        android:orientation="horizontal"
...
