...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_light">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myReview_RV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_review" />

    <TextView
        android:id="@+id/noReview_TV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:text="@string/no_review_yet"
        android:textStyle="bold"
        android:gravity="center"/>
...
