...
            android:isScrollContainer="false"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="10dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:background="@android:color/transparent"
                android:paddingBottom="0dp"
...
