...
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="150dp"
                android:layout_height="54dp"
                android:layout_margin="15dp"
                android:text="@string/submit"
                android:textAlignment="gravity"
                android:textSize="14sp"
...
