...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/upload_photo_button"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_upload_picture"
                    android:contentDescription="@string/image_post_cd"
                    android:scaleType="centerCrop"
...
